# metadata

./: COPYING  Cargo.toml  Makefile  README.md  appveyor.yml
.github/workflows/: test.yml
Formula/: metadata.rb
man/: metadata.1  metadata.1.adoc
packaging/debian/: .gitignore  README.md
packaging/debian/debian/: cargo.config  changelog  control  copyright  metadata.install  metadata.manpages  rules  watch
src/: lib.rs  main.rs  media_file.rs  metadata.rs  prejudice.rs  render.rs  scan.rs  tags.rs  util.rs
src/stream/: audio.rs  mod.rs  subtitle.rs  video.rs
tests/: integration_test.rs
tests/data/_5_1_side_wav/: 5.1-side.wav.txt  5.1-side.wav.with_all_tags.txt  5.1-side.wav.with_checksum.txt
tests/data/_5_1_wav/: 5.1.wav.txt  5.1.wav.with_all_tags.txt
tests/data/aac_aac/: aac.aac  aac.aac.txt  aac.aac.with_all_tags.txt
tests/data/aac_he_aac/: aac_he.aac  aac_he.aac.txt  aac_he.aac.with_all_tags.txt
tests/data/ac3_ac3/: ac3.ac3  ac3.ac3.txt  ac3.ac3.with_all_tags.txt
tests/data/aiff_aiff/: aiff.aiff  aiff.aiff.txt
tests/data/flac_flac/: flac.flac  flac.flac.txt  flac.flac.with_all_tags.txt
tests/data/h264_3g2/: h264.3g2  h264.3g2.txt  h264.3g2.with_all_tags.txt
tests/data/h264_3gp/: h264.3gp  h264.3gp.txt  h264.3gp.with_all_tags.txt
tests/data/h264_aac_mp4/: h264.aac.mp4.txt  h264.aac.mp4.with_all_tags.txt
tests/data/h264_aac_srt_mkv/: h264.aac.srt.mkv  h264.aac.srt.mkv.txt  h264.aac.srt.mkv.with_all_tags.txt  h264.aac.srt.mkv.with_tags.txt
tests/data/h264_ass_mkv/: h264.ass.mkv  h264.ass.mkv.txt  h264.ass.mkv.with_all_tags.txt
tests/data/h264_flv/: h264.flv  h264.flv.txt  h264.flv.with_all_tags.txt
tests/data/h264_high4_0_mp4/: h264_high4.0.mp4.txt  h264_high4.0.mp4.with_all_tags.txt
tests/data/h264_interlaced_mp4/: h264_interlaced.mp4.txt  h264_interlaced.mp4.with_all_tags.txt  h264_interlaced.mp4.with_frame_decoding.txt
tests/data/h264_mov/: h264.mov  h264.mov.txt  h264.mov.with_all_tags.txt
tests/data/h264_mp4/: h264.mp4.txt  h264.mp4.with_all_tags.txt
tests/data/h264_srt_mkv/: h264.srt.mkv  h264.srt.mkv.txt  h264.srt.mkv.with_all_tags.txt  h264.srt.mkv.with_tags.txt
tests/data/h264_ts/: h264.ts  h264.ts.txt  h264.ts.with_all_tags.txt
tests/data/hevc_mp4/: hevc.mp4.txt  hevc.mp4.with_all_tags.txt
tests/data/jpeg_jpeg/: jpeg.jpeg.with_all_tags.txt
tests/data/mjpeg_mp4/: mjpeg.mp4.txt  mjpeg.mp4.with_all_tags.txt
tests/data/mono_wav/: mono.wav.txt  mono.wav.with_all_tags.txt
tests/data/mp3_jpeg_mp3/: mp3.jpeg.mp3.txt  mp3.jpeg.mp3.with_all_tags.txt
tests/data/mp3_mp3/: mp3.mp3.txt  mp3.mp3.with_all_tags.txt
tests/data/mp3_png_mp3/: mp3.png.mp3.txt  mp3.png.mp3.with_all_tags.txt
tests/data/mpeg1video_mp4/: mpeg1video.mp4.txt  mpeg1video.mp4.with_all_tags.txt
tests/data/mpeg2video_m2v/: mpeg2video.m2v  mpeg2video.m2v.txt  mpeg2video.m2v.with_all_tags.txt
tests/data/mpeg2video_mp4/: mpeg2video.mp4.txt  mpeg2video.mp4.with_all_tags.txt
tests/data/mpeg2video_mpg/: mpeg2video.mpg  mpeg2video.mpg.txt
tests/data/mpeg4_mp4/: mpeg4.mp4.txt  mpeg4.mp4.with_all_tags.txt
tests/data/png_png/: png.png.txt  (+1 more)
(+21 files in other folders)
