[package]
name = "metadata"
version = "0.1.2"
authors = ["Zhiming Wang <i@zhimingwang.org>"]
description = "Media file metadata for human consumption"
documentation = "https://docs.rs/metadata"
homepage = "https://github.com/zmwangx/metadata#readme"
repository = "https://github.com/zmwangx/metadata"
readme = "README.md"
keywords = ["ffmpeg", "multimedia", "video", "audio"]
categories = ["command-line-utilities", "multimedia"]
license = "MIT"

[lib]
name = "metadata"
path = "src/lib.rs"

[dependencies]
clap = "2.32.0"
digest = { version = "0.7.5", features = ["std"] }
env_logger = "0.5.13"
handlebars = "1.0.3"
lazy_static = "1.1.0"
log = "0.4.5"
regex = "1.0.5"
serde = "1.0.78"
sha2 = "0.7.1"
serde_derive = "1.0.79"

[dependencies.ffmpeg-next]
version = "0.2.0"
default-features = false
features = ["codec", "format"]

[dev-dependencies]
quickcheck = "0.7.1"
tempfile = "3.0.3"

[features]
default = ["ffmpeg4"]
ffmpeg4 = ["ffmpeg-next/ffmpeg4"]
