[package]
name = "metadata"
version = "0.1.5"
authors = ["Zhiming Wang <i@zhimingwang.org>"]
description = "Media file metadata for human consumption"
documentation = "https://docs.rs/metadata"
homepage = "https://github.com/zmwangx/metadata#readme"
repository = "https://github.com/zmwangx/metadata"
readme = "README.md"
keywords = ["ffmpeg", "multimedia", "video", "audio"]
categories = ["command-line-utilities", "multimedia"]
license = "MIT"

[lib]
name = "metadata"
path = "src/lib.rs"

[dependencies]
clap = "2.32.0"
digest = { version = "0.9.0", features = ["std"] }
env_logger = "0.7.1"
handlebars = "3.3.0"
lazy_static = "1.1.0"
log = "0.4.11"
regex = "1.0.5"
serde = "1.0.114"
sha2 = "0.9.1"
serde_derive = "1.0.79"

[dependencies.ffmpeg-next]
version = "4.3.3"
default-features = false
features = ["codec", "format"]

[dev-dependencies]
quickcheck = "0.9.2"
tempfile = "3.0.3"

[features]
default = ["ffmpeg43"]
ffmpeg43 = ["ffmpeg-next/ffmpeg43"]
ffmpeg42 = ["ffmpeg-next/ffmpeg42"]
ffmpeg41 = ["ffmpeg-next/ffmpeg41"]
ffmpeg4 = ["ffmpeg-next/ffmpeg4"]
