[package]
name = "metadata"
edition = "2021"
version = "0.1.9"
authors = ["Zhiming Wang <i@zhimingwang.org>"]
description = "Media file metadata for human consumption"
documentation = "https://docs.rs/metadata"
homepage = "https://github.com/zmwangx/metadata#readme"
repository = "https://github.com/zmwangx/metadata"
readme = "README.md"
keywords = ["ffmpeg", "multimedia", "video", "audio"]
categories = ["command-line-utilities", "multimedia"]
license = "MIT"

[lib]
name = "metadata"
path = "src/lib.rs"

[features]
static = ["ffmpeg-next/static"]

[dependencies]
clap = "2.34.0"
digest = { version = "0.9.0", features = ["std"] }
env_logger = "0.7.1"
handlebars = "3.5.5"
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.21"
regex = "1.10.4"
serde = "1.0.198"
sha2 = "0.9.9"
serde_derive = "1.0.198"

[dependencies.ffmpeg-next]
version = "7.0.0"
default-features = false
features = ["codec", "format"]

[dev-dependencies]
quickcheck = "0.9.2"
tempfile = "3.10.1"
